# next_long_reverser_rs

./: .gitignore  Cargo.toml  README.md
gpu_checker/: CMakeLists.txt  kernel.cl  main.c
gpu_checker/TEST/: out.txt
src/: bin.rs  lib.rs
