[package]
name = "next_long_reverser"
version = "0.1.0"
authors = ["Neil <neilhube12@gmail.com>"]
edition = "2018"
description="The preimage of nextLong() for the Java LCG"
categories=["algorithms","data-structures"]
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
java_random = "0.1.3"

[[bin]]
name="bin"
path="src/bin.rs"
